WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64894
Don't throw away code when JSGarbageCollect API is called
https://bugs.webkit.org/show_bug.cgi?id=64894
Summary
Don't throw away code when JSGarbageCollect API is called
Oliver Hunt
Reported
2011-07-20 14:03:21 PDT
Don't throw away code when JSGarbageCollect API is called
Attachments
Patch
(1.64 KB, patch)
2011-07-20 14:05 PDT
,
Oliver Hunt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-07-20 14:05:14 PDT
Created
attachment 101507
[details]
Patch
Oliver Hunt
Comment 2
2011-07-20 14:07:55 PDT
Committed
r91401
: <
http://trac.webkit.org/changeset/91401
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug