Don't throw away code when JSGarbageCollect API is called https://bugs.webkit.org/show_bug.cgi?id=64894

Reviewed by Sam Weinig.

Just call collectAllGarbage.  That will clean up all unneeded
code without causing any pathological recompilation problems.

* API/JSBase.cpp:
(JSGarbageCollect):

Canonical link: https://commits.webkit.org/80633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91401 268f45cc-cd09-0410-ab3c-d52691b4dbfc