Source/JavaScriptCore/API/JSBase.cpp
@@ -97,10 +97,8 @@ void JSGarbageCollect(JSContextRef ctx)
     APIEntryShim entryShim(exec, false);
 
     JSGlobalData& globalData = exec->globalData();
-    if (!globalData.heap.isBusy()) {
-        // releaseExecutableMemory forces a full GC
-        globalData.releaseExecutableMemory();
-    }
+    if (!globalData.heap.isBusy())
+        globalData.heap.collectAllGarbage();
 
     // FIXME: Perhaps we should trigger a second mark and sweep
     // once the garbage collector is done if this is called when
